--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@prisma/client": "^6.5.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
+    "argon2": "^0.41.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
@@ -48,7 +51,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^22.13.13",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
