--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "class-validator": "^0.14.1",
     "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
+    "device-detector-js": "^3.0.3",
     "express-session": "^1.18.1",
+    "geoip-lite": "^1.4.10",
     "graphql": "^16.10.0",
+    "i18n-iso-countries": "^7.14.0",
     "ioredis": "^5.6.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.2.0",
@@ -50,6 +53,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.2",
     "@types/node": "^22.13.13",
     "@types/supertest": "^6.0.0",
