--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^13.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.1",
@@ -31,6 +32,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.5.0",
+    "@react-email/components": "^0.0.34",
+    "@react-email/tailwind": "^1.0.4",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
     "argon2": "^0.41.1",
@@ -45,6 +48,7 @@
     "i18n-iso-countries": "^7.14.0",
     "ioredis": "^5.6.0",
     "prisma": "^6.5.0",
+    "react": "^19.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -56,6 +60,7 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.2",
     "@types/node": "^22.13.13",
+    "@types/react": "^19.0.12",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
